--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <body>
   <div class="calculator-grid">
     <div class="output">
-        <div data-previous-operand class="previous-operand">
-            <div data-current-operand class="current-operand">
-
-            </div>
-        </div>
+        <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
     </div>
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
