--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 
 <div class ="container">
     <div class="todo-app">
-        <h2>To-Do List <img src="C:\Users\Korisnik\Desktop\Fakultet\icon.png" height="50" width ="300"></h2>
+        <h2>To-Do List <img src="images/icon.png" height="50" width ="300"></h2>
           <div class="row">
 
             <input type="text" id="input-box" placeholder="Add your text">
